# imagico

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: chunk.rs  chunk_type.rs  error.rs  lib.rs  main.rs  png.rs  utils.rs
src/args/: command.rs  commands.rs  mod.rs
src/png/: chunk.rs  chunk_type.rs  mod.rs
