[package]
name = "imagico"
version = "0.1.0"
description = "A command-line program for hiding secret messages in PNG files."
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
repository = "https://github.com/kobby-pentangeli/imagico"
readme = "README.md"
license = "MIT or APACHE-2.0"
keywords = ["cli", "parser", "png"]
categories = ["parsing tools"]
edition = "2021"

[lib]
name = "imagico"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
harness = true
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "imapp"
path = "src/main.rs"
test = false
bench = false

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
crc = "3.0.0"
thiserror = "1.0.37"

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
